finished login, signup and landing wireframes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br>
     <ul>
         <li><a href="./forms/location.html" target="_blank">Location Form</a></li>
-        <li><a href="./forms/loginhtml" target="_blank">Login Form</a></li>
+        <li><a href="./forms/login.html" target="_blank">Login Form</a></li>
         <li><a href="./forms/signup.html" target="_blank">Signup Form</a></li>
         <li><a href="./forms/offer-form.html" target="_blank">Offer Form</a></li>
         <li><a href="./forms/request-form.html" target="_blank">Request Form</a></li>
