completed nav wireframes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h2>Nav Bar</h2>
     <ul>
         <li><a href="./nav-bars/nav.html" target="_blank">Nav Bar</a></li>
+        <li><a href="./nav-bars/landing-nav.html" target="_blank">Landing Page Nav Bar</a></li>
     </ul>
 </body>
 </html>
