--- a/nav-bars/landing-nav.html
+++ b/nav-bars/landing-nav.html
@@ -2,23 +2,22 @@
 <html lang="en">
 
 <head>
-    <title>Nav Wireframe</title>
+    <title>Landing Page Nav Wireframe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="nav.css">
+    <link rel="stylesheet" type="text/css" href="landing-nav.css">
 </head>
 
 <body>
     <nav role="navigation">
         <img src="../images/placeholder-logo.png" class="logo">
         <ul class="nav-links">
-            <li><i class="far fa-comment"></i> Messages</li>
-            <li><i class="far fa-user"></i> Account</li>
+            <li>Log In</li>
+            <li>Sign Up</li>
         </ul>
     </nav>
     <main role="main">
         
     </main>
-    <script src="https://kit.fontawesome.com/e3d30a91a8.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
