added wireframes for account, password, messages and home pages

--- a/forms/login.html
+++ b/forms/login.html
@@ -15,8 +15,8 @@
         </header>
         <form class='login-form'>
             <div>
-                <label for="username">Email</label>
-                <input type="text" name='username' id='username' />
+                <label for="email">Email</label>
+                <input type="email" name='email' id='email' />
             </div>
             <div>
                 <label for="password">Password</label>
