--- a/forms/signup.html
+++ b/forms/signup.html
@@ -19,8 +19,8 @@
                 <input type="text" name='first-name' id='first-name' />
             </div>
             <div>
-                <label for="username">Email</label>
-                <input type="text" name='username' id='username' />
+                <label for="email">Email</label>
+                <input type="email" name='email' id='email' />
             </div>
             <div>
                 <label for="password">Password</label>
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <label for="confirm-password">Confirm Password</label>
-                <input type="confirm-password" name='confirm-password' id='confirm-password' />
+                <input type="password" name='confirm-password' id='confirm-password' />
             </div>
             <button>Cancel</button>
             <button type='submit'>Create Account</button>
