--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="./forms/signup.html" target="_blank">Signup Form</a></li>
         <li><a href="./forms/offer-form.html" target="_blank">Offer Form</a></li>
         <li><a href="./forms/request-form.html" target="_blank">Request Form</a></li>
+        <li><a href="./forms/change-password.html" target="_blank">Change Password Form</a></li>
     </ul>
     <h2>Nav Bar</h2>
     <ul>
