added user post page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./main-screens/messages.html" target="_blank">Message Page</a></li>
         <li><a href="./main-screens/offer-response.html" target="_blank">Offer Response Page</a></li>
         <li><a href="./main-screens/request-response.html" target="_blank">Request Response Page</a></li>
+        <li><a href="./main-screens/user-post.html" target="_blank">User Post Page</a></li>
     </ul>
     <h2>Forms</h2>
     <a href="#" target="_blank">Forms User Flows</a>
