--- a/main-screens/request-response.html
+++ b/main-screens/request-response.html
@@ -11,7 +11,7 @@
     <nav role="navigation">Nav</nav>
     <main role="main">
         <header>
-            <h3>James made a request</h3>
+            <h3>Respond to James' request</h3>
         </header>
         <h4>James needs help with:</h4>
         <ul class="tasks">
